@@ -1,6 +1,7 @@
 //////////////////////////////////////////////////////////////////////////
 //  
 //  Copyright (c) 2011, Image Engine Design Inc. All rights reserved.
+//  Copyright (c) 2012, John Haddon. All rights reserved.
 //  
 //  Redistribution and use in source and binary forms, with or without
 //  modification, are permitted provided that the following conditions are
@@ -51,7 +52,7 @@ using namespace GafferUI;
 void GafferUIBindings::bindCompoundNodule()
 {
 	IECorePython::RunTimeTypedClass<CompoundNodule>()
-		.def( init<Gaffer::CompoundPlugPtr>() )
+		.def( init<Gaffer::CompoundPlugPtr, LinearContainer::Orientation>( ( arg( "plug" ), arg( "orientation" )=LinearContainer::X ) ) )
 		.GAFFERUIBINDINGS_DEFGADGETWRAPPERFNS( CompoundNodule )
 	;
 }
